--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-=<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,7 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Web Scraper for images</h1>
+    <nav class="navbar bg-body-secondary">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1"><h1>Web Scraper for images</h1></span>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <div class="container mt-5">
+            <h1 class="mb-4">Enter a Web Link</h1>
+            <form action="/result" method="post">
+                <div class="form-group">
+                    <label for="web_link">Web Link:</label>
+                    <input type="text" class="form-control" id="web_link" name="web_link" required>
+                </div>
+                <button type="submit" class="btn btn-primary my-4">Submit</button>
+            </form>
+        </div>
+        
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
